Added Java9 examples